resources/css/oc.css
body,
html,
.body {
  background-color: #FBFAF7;
  color: #34414F;
  width: 100%;
  height: 100%;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

table {
  background-color: #FBFAF7 !important;
}

table th, 
table.body .columns,
table.body .column {
  padding: 0px !important;
}

table th.body-spacer {
  background-color: white !important;
}

h1 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 24px;
  font-weight: bold;
  color: #34414F;
  margin: 0px;
}

h2 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  font-weight: bold;
  color: #3FBD7C;
  margin: 0px;
}

p {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  color: #34414F;
  line-height: 1.5;
  margin: 0px;
}

p.board-name {
  color: #888D94;
  font-size: 18px;
  font-family: Helvetica, Arial, sans-serif !important;
  letter-spacing: 0;
  line-height: 22px;
}

p.attribution {
  font-size: 12px;
  line-height: 14px;
  color: #888D94;
}

span.note-body {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
}

span.button-text {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: bold;
  padding-top: 13px;
}

table.cta-button span.button-text {
  color: white;
}

table.post-button span.button-text {
  color: #3FBD7C;
}

table.footer p {
  color: #C4C6C9;
  font-size: 14px;
}

table.footer a {
  font-weight: bold;
  color: #3FBD7C;
}

.header-table {
  background-color: #FBFAF7 !important;
  max-width: 600px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

.footer-table {
  background-color: #FBFAF7 !important;
  max-width: 600px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

.email-content {
  max-width: 600px;
  width: 100%;
  background-color: white !important;
  text-align: center;
  vertical-align: middle;
  border-radius: 6px;
}

table.email-content tr td.digest-header {
  background-color: #FFECE9;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

table.email-content tr td.vertical-padding, table.email-content tr td.columns.vertical-padding {
  padding: 0 24px !important;
}

.email-content tr:first-child, .email-content tr:first-child td:first-child, .email-content tr:first-child th:first-child {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.digest-header-subline {
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 12px;
  line-height: 16px;
  color: rgba(52, 66, 80, 0.4);
  text-align: center;
  background-color: #FFECE9;
}

.digest-content {
  border: 1px solid #F3F3F4;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.email-content tr:last-child, .email-content tr:last-child td:last-child, .email-content tr:last-child th:last-child {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.email-content tr, .email-content tr td {
  background-color: white !important;
}

.header-bottom-border {
  border-bottom: 1px solid #F0F0F1;
}

.footer-top-border {
  border-top: 1px solid #F0F0F1;
}

p.header-paragraph {
  text-align: right;
  font-size: 14px;
  color: #898D93;
}

p.header-paragraph a {
  color: lightgreen;
  font-size: 14px;
  color: #3FBD7C;
  text-decoration: underline;
}

table.header-bottom {
  border-bottom: 1px solid #F0F0F1;
}

span.heart {
  width: 18px;
  height: 20px;
  display: inline-block;
  vertical-align: sub;
}

p.footer-paragraph {
  color: #888D94;
  font-size: 14px;
  font-weight: 400;
}

p.header-paragraph {
  color: #898D93;
  font-size: 14px;
  font-weight: 400;
}

p.footer-paragraph.bottom-footer, p.footer-paragraph.bottom-footer a {
  color: #888D94;
  text-align: center;
}

p.header-paragraph.top-header, p.footer-paragraph.top-header a {
  color: #C4C6C7;
}

p.footer-paragraph a {
  color: #898D93;
  text-decoration: underline;
  font-weight: 400;
}

p.header-paragraph a {
  color: #898D93;
  text-decoration: underline;
  font-weight: 400;
}

table.footer-table a.footer-link {
  float: right;
  margin-left: 16px;
  text-decoration: underline;
}

.note-left-padding {
  padding-left: 24px !important;
}

.note-x-margin > * {
  margin-left: 24px !important;
  margin-right: 24px !important;
}

.note-author-avatar {
  float: left;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 50%;
}

span.note-author-name {
  float: left;
  padding-top: 4px;
  font-weight: bold;
  font-size: 14px;
}

table.horizontal-line {
  border-top: 1px solid #F0F0F1;
}

p.digest-help {
  color: #898D93;
  font-size: 14px;
}

p.digest-help a{
  color: #3FBD7C;
  text-decoration: underline;
}

th.footer-icon img {
  float: right;
}

th.header-icon img {
  float: left;
}

th.header-right {
  float: right;
  text-align: right;
}

span.header-right-span {
  text-align: right;
  color: #C4C6C7;
  font-size: 14px;
  font-family: Helvetica, Arial, sans-serif !important;
}

img.read-post-image {
  width: 16px;
  height: 16px;
  float: left;
}

span.read-post-text {
  float: left;
  margin-left: 8px;
  color: #3FBD7C;
  font-size: 14px;
}

p.digest-bottom-footer-paragraph {
  color: rgba(137, 141, 147, 0.5);
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph, p.digest-footer-paragraph a {
  color: #888D94;
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph a {
  font-weight: 400;
  text-decoration: underline;
}

p.invite-carrot-disclaimer {
  color: #34414f;
  font-size: 16px;
  font-weight: 400;
}

p.invite-carrot-disclaimer a {
  color: #34414f;
  font-size: 16px;
  text-decoration: underline;
  font-weight: 400;
}

img.green-button {
  width: 100%;
  font-family: sans-serif;
  color: #ffffff;
  font-size: 20px;
  display: block;
  border: 0px;
}

p.notification-link a {
  font-size: 14px;
  font-weight: bold;
  color: #3FBD7C;
}

span.notification-content, span.notification-content p, span.notification-content div {
  color: #34414F;
}

span.oc-mention {
  font-weight: bold;
}


.note-paragraph, .note-paragraph tr, .note-paragraph tr th {
  background-color: #FDF6E4 !important;
}

.note-paragraph.top-note-paragraph, .note-paragraph.top-note-paragraph tr, .note-paragraph.top-note-paragraph tr th {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.note-paragraph.bottom-note-paragraph, .note-paragraph.bottom-note-paragraph tr, .note-paragraph.bottom-note-paragraph tr th {
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.note-paragraph .text-left {
  margin-left: 24px;
  margin-right: 24px;
}

a.learn-more {
  float: left;
  margin-left: 16px;
  color: #3FBD7C;
  font-size: 14px;
  font-weight: bold;
  margin-top: 10px;
}

.left-align {
  float: left;
}

img.post-avatar {
  width: 32px;
  height: 32px;
  object-fit: contain;
  border-radius: 50%;
  float: left;
}

.token-link {
  color: #3FBD7C;
  font-size: 16px;
  text-align: left;
  cursor: pointer;
}

.green-button:hover {
  color: white;
}

.green-button {
  display: block;
  float: left;
  font-size: 14px;
  font-weight: bold;
  color: white;
  min-width: 220px;
  background-color: #52C489;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px;
}

.auto-x-margin {
  margin: auto;
}

.center-align {
  text-align: center;
}

.view-reminders {
  display: block;
  margin: 0 auto;
  font-size: 16px;
  font-weight: bold;
  color: white !important;
  width: 128px;
  background-color: #FA6654;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px;
}

.go-to-posts {
  display: block;
  margin: 0 auto;
  font-size: 16px;
  font-weight: bold;
  color: #FB5E48;
  width: 128px;
  background-color: #FFDFDB;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px;
}

.go-to-posts:visited, .go-to-posts:hover {
  color: #FB5E48;
}

span.must-see-container {
  background-color: rgba(97, 135, 248, .2);
  padding: 0px 4px;
  margin-left: 8px;
  border-radius: 4px;
  white-space:nowrap;
  line-height: 18px;
  height: 18px;
}

img.must-see-icon {
  width: 8px;
  height: 10px;
  display: inline-block;
}

span.must-see {
  width: 52px;
  margin-left: 4px;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 11px;
  font-weight: bold;
  color: #5789FA;
  vertical-align: middle;
  line-height: 13px;
  height: 13px;
}

table.video-cover-table tr td {
  height: 103px;
}

a.video-cover {
  display: block;
  width: 137px;
  height: 103px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

img.video-play {
  display: block;
  padding-left: 48.5px;
  padding-top: 31px;
  opacity: 0.8;
}

div.video-duration-container {
  padding-right: 8px;
  padding-top: 10px;
  float: right;
}

span.video-duration {
  background-color: rgba(0, 0, 0, 0.4);
  color: white;
  border-radius: 4px;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 11px;
  padding: 2px 3px;

}

td.post-block-avatar {
  display: inline-block;
  width: 48px;
  min-height: 32px;
  height: 100%;
  vertical-align: top;
}

td.board-block-bottom-line {
  border-bottom: 1px solid #F3F3F4;
}

td.post-block-avatar-right {
  display: inline-block;
  min-height: 32px;
  width: calc(100% - 52px);
  height: 100%;
  vertical-align: top;
}

td.post-block-right {
  display: inline-block;
  min-height: 32px;
  width: 100%;
  height: 100%;
  vertical-align: top;
}

div.logo-container {
  width: 40px;
  height: 40px;
  padding: 7px;
  background-color: #fff;
  border: 1px solid #ECECEC;
  border-radius: 4px;
  margin: 0 auto;
}

img.logo {
  background-color: #fff;
  width: 40px;
  height: 40px;
  object-fit: contain;
}

.digest-header-bg {
  background-color: #FFECE9 !important;
}

.digest-header-top {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.hidden {
  display: none;
}

.reminders-footer {
  background-color: #ECECEC;
}

.reminders-bottom-footer, .reminders-bottom-footer tr, .reminders-bottom-footer tr th,
.reminders-bottom-footer .spacer, .reminders-bottom-footer .spacer tr, .reminders-bottom-footer .spacer tr th {
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.reminders-footer-paragraph {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
  color: #888D94;
  text-align: center;
}

.settings-footer {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
  color: #888D94;
  text-align: left;
}

.settings-footer a, .settings-footer a:visited {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
  color: #888D94;
  text-decoration: underline;
  text-align: left;
}

.reminders-footer-paragraph a, .reminders-footer-paragraph a:visited {
  color: #888D94;
  text-decoration: underline;
}

.top-email-content, .top-email-content tr, .top-email-content tr th,
.top-email-content .spacer, .top-email-content .spacer tr, .top-email-content .spacer tr th {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

h2.reminder-headline {
  text-align: center;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  font-weight: bold;
  color: #34414F;
  margin: 0px;
}

span.post-title {
  color: #2BA767;
}

/*
  Gmail doesn't like multiple media queries, if you need to use
  @media only screen and (max-width:596px)
  use the one in foundation.
  Also make sure the syntax is correct. They say it's very picky:
  Check https://stackoverflow.com/a/46871671/561744
*/

